--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using MudBlazor
 @using SmartLocate.Desktop.Admin.Services
+@using SmartLocate.Desktop.Admin.Shared.Layouts
 
 @inject NavigationManager NavigationManager
 @inject AppThemeService AppThemeService
