--- a/src/Shared/Layouts/MainLayout.razor
+++ b/src/Shared/Layouts/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <AuthorizeView>
     <MudLayout>
-        <MudAppBar Dense>
+        <MudAppBar Dense Color="Color.Primary">
             <MudHidden Breakpoint="Breakpoint.MdAndUp">
                 <MudIconButton Edge="Edge.Start" DisableRipple OnClick="@(() => IsOpen = !IsOpen)" Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit"/>
                 <MudIconButton Class="mt-n1" Color="Color.Inherit" Icon="@Icons.Custom.Brands.Microsoft"/>
