--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -6,7 +6,9 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.JSInterop
 @using MudBlazor
+@using SmartLocate.Desktop.Admin.Extensions
 @using SmartLocate.Desktop.Admin.Services
 @using SmartLocate.Desktop.Admin.Shared.Layouts
 
