--- a/src/Pages/BusRoute/BusRoutes.razor
+++ b/src/Pages/BusRoute/BusRoutes.razor
@@ -51,10 +51,14 @@
         </LoadingContent>
         <HeaderContent>
             <MudTh>Route Number</MudTh>
+            <MudTh>Route Name</MudTh>
+            <MudTh>Start Location</MudTh>
             <MudTh>Actions</MudTh>
         </HeaderContent>
         <RowTemplate Context="busRoute">
             <MudTd DataLabel="Route Number"><MudHighlighter HighlightedText="@_searchQuery" Text="@busRoute.RouteNumber.ToString()"/></MudTd>
+            <MudTd DataLabel="Route Name"><MudHighlighter HighlightedText="@_searchQuery" Text="@busRoute.RouteName"/></MudTd>
+            <MudTd DataLabel="Start Location"><MudHighlighter HighlightedText="@_searchQuery" Text="@busRoute.StartLocation.Name"/></MudTd>
             <MudTd>
                 <MudStack Row>
                     <MudButton Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Edit" Color="Color.Warning"
@@ -114,13 +118,13 @@
         NavigationManager.NavigateTo($"/BusRoutes/{supplierResponse.Id}/Edit");
     }
     
-    private async Task DeleteAsync(BusRouteResponse adminUser)
+    private async Task DeleteAsync(BusRouteResponse busRoute)
     {
         if(await DialogService.ShowDeleteDialog("Delete Bus Route", "Are you sure you want to delete this Bus Route?", yesText: "Delete", cancelText: "Cancel"))
         {
             try
             {
-                await BusRouteHttpClient.DeleteAsync(adminUser.Id);
+                await BusRouteHttpClient.DeleteAsync(busRoute.Id);
                 Snackbar.Add("Bus Route deleted successfully.", Severity.Success);
                 await _mudTable.ReloadServerData();
             }
