Minor fixes and refactorings

--- a/src/Pages/AdminUser/AddAdminUserDialog.razor
+++ b/src/Pages/AdminUser/AddAdminUserDialog.razor
@@ -23,7 +23,7 @@
                                   @bind-Value="@Model.PhoneNumber" For="@(() => Model.PhoneNumber)" />
                 </MudItem>
                 <MudItem xs="12" sm="6">
-                    <MudCheckBox T="bool" @bind-Checked="@Model.IsSuperAdmin" Label="Enable Super-Admin privileges" />
+                    <MudCheckBox T="bool" @bind-Value="@Model.IsSuperAdmin" Label="Enable Super-Admin privileges" />
                 </MudItem>
                 <MudItem xs="12" sm="6">
                     <MudTextField Margin="Margin.Dense" Variant="Variant.Outlined" Label="Password" 
